# cc-fleet

./: .env.example  .gitignore  AGENTS.md  CONTRIBUTING.md  LICENSE  README.en.md  README.md  SECURITY.md  config.example.yaml  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
docs/: architecture.md  docker-mode.md  remote-mode.md  reviewer.md  security.md  state-machine.md  troubleshooting.md
src/cc_fleet/: __init__.py  __main__.py  app.py  cli.py
src/cc_fleet/bot/: __init__.py  base.py  factory.py  message.py
src/cc_fleet/config/: loader.py  schema.py
src/cc_fleet/core/: chat.py  commands.py  dispatcher.py  mr.py  mr_meta.py  repo.py  review.py  runner_factory.py  (+5 more)
tests/: conftest.py  test_agent_crosscut.py  test_app.py  test_auto_continue.py  test_bot_base.py  test_chat.py  test_cli.py  test_commands.py  test_config_agent.py  test_config_loader.py  test_config_reviewer.py  test_dispatcher.py  test_handoff.py  test_migrations.py  test_mr.py  test_mr_meta.py  test_permissions.py  test_pretool_guard.py  test_repo.py  test_review.py  test_session_log.py  test_session_manager.py  test_session_state_machine.py  test_slug.py  test_state.py  test_util_ids.py  test_util_text.py  test_util_time.py  test_validate_runtime.py  test_web_server.py  test_wechat_runner.py  test_wecom_runner.py
tests/runners/: test_claude_guardrail.py  test_claude_lowlevel.py  test_claude_runner_unit.py  test_codex_runner.py  test_engine.py  test_engine_stream.py  test_opencode_runner.py  test_runner_factory.py
(+34 files in other folders)
